welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:3: error: not found: value max
  max = nums(0);
  ^maxValue:5: error: not found: value max
  	if(nums(i)> max) max= nums(i);
                    ^maxValue:5: error: not found: value max
  	if(nums(i)> max) max= nums(i);
                         ^maxValue:7: error: not found: value max
  return(max);
         ^